--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "declarations": true
   },
   "dependencies": {
+    "@babel/runtime": "^7.12.5",
     "egg": "^2.15.1",
     "egg-scripts": "^2.13.0",
     "egg-sequelize": "^6.0.0",
@@ -15,13 +16,20 @@
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
     "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
+    "eslint-config-egg": "^7.1.0",
+    "html-webpack-plugin": "^4.5.0",
+    "webpack": "^5.11.0"
   },
   "engines": {
     "node": ">=10.0.0"
